# mlops_team_20-1

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  data.dvc  pyproject.toml  requirements.txt  setup.cfg  setup.md
.dvc/: config
data/processed/: Acoustic_Features_Processed.csv
data/raw/: .gitignore  acoustic_features.csv.dvc
docker/: docker-compose.yaml
docker/minio/: create-buckets.sh
docker/mlflow/: Dockerfile
docs/: data_background.md
notebooks/: 1.0-gbl-initial-data-exploration.ipynb  2.0-llam-pre-processing.ipynb
notebooks/Data_background/: 1.2.1.0 Gettting_the_data.ipynb
notebooks/Developing/: turkish_music_emotion_EDA.ipynb  turkish_music_emotion_Refactored_V1.ipynb  turkish_music_emotion_Refactored_V2.ipynb
notebooks/Modeling_pipeline/: .gitignore  config.env  docker-compose.yaml
notebooks/Modeling_pipeline/mlflow/: Dockerfile
references/: acoustic_features_data_description.md  tme_dataset_reference.md
turkish_music_emotion/: __init__.py  dataset.py  eda.py  features.py  plots.py
turkish_music_emotion/modeling/: predict.py  train.py
